# lab06

./: CMakeLists.txt  CPackConfig.cmake  Report3.md
.github/workflows/: Cl.yml  Cl_release.yml
formatter_ex_lib/: CMakeLists.txt
formatter_lib/: CMakeLists.txt
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: CMakeLists.txt  solver.cpp
